package com.example.front_sample;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class UDPActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_udp);
    }


}
