package com.example.front_sample.config;

public class Config {
    public static final int NUM_OF_LEDS = 10;
    public static final int MAX_DEGREE = 360;

    public static final int BOARD_PORT = 9000;
    public static final int ANDROID_PORT = 9001;
    public static final int UDP_SIZE_LIMIT_BYTES = 1000;

    public static final int VIDEO_SIZE = 128;
    public static final int IMAGE_SIZE = 128;
}
