package com.example.front_sample.types;

public enum FrameType {
    VIDEO,
    PICTURE  // will be sent immediately
}
