package com.example.front_sample.utils;

public class UDPHandler {
    public UDPHandler() {

    }

    public void receiveBroadcast() {

    }
}
