@startuml

title __APP's Class Diagram__\n

  namespace com.example.front_sample {
    class com.example.front_sample.BuildConfig {
    }
  }
  

  namespace com.example.front_sample {
    namespace activities {
      class com.example.front_sample.activities.GalleryActivity {
      }
    }
  }
  

  namespace com.example.front_sample {
    namespace activities {
      class com.example.front_sample.activities.MainActivity {
      }
    }
  }
  

  namespace com.example.front_sample {
    namespace activities {
      class com.example.front_sample.activities.PaintActivity {
      }
    }
  }
  

  namespace com.example.front_sample {
    namespace activities {
      class com.example.front_sample.activities.UDPActivity {
      }
    }
  }
  

  namespace com.example.front_sample {
    namespace activities {
      class com.example.front_sample.activities.VideoActivity {
      }
    }
  }
  

  namespace com.example.front_sample {
    namespace config {
      class com.example.front_sample.config.Config {
      }
    }
  }
  

  namespace com.example.front_sample {
    namespace types {
      enum FrameType {
      }
    }
  }
  

  namespace com.example.front_sample {
    namespace utils {
      namespace HttpHandler {
        class com.example.front_sample.utils.HttpHandler.HttpHandler {
        }
      }
    }
  }
  

  namespace com.example.front_sample {
    namespace utils {
      class com.example.front_sample.utils.ImageHandler {
      }
    }
  }
  

  namespace com.example.front_sample {
    namespace utils {
      class com.example.front_sample.utils.Utils {
      }
    }
  }
  

  namespace com.example.front_sample {
    namespace utils {
      class com.example.front_sample.utils.VideoHandler {
      }
    }
  }
  

  namespace com.example.front_sample {
    namespace utils {
      namespace udp {
        class com.example.front_sample.utils.udp.UDPHandler {
        }
      }
    }
  }
  

  namespace com.example.front_sample {
    namespace utils {
      namespace udp {
        class com.example.front_sample.utils.udp.UDPServerThread {
        }
      }
    }
  }
  

  com.example.front_sample.activities.GalleryActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.front_sample.activities.GalleryActivity o-- com.example.front_sample.utils.udp.UDPHandler : udpHandler
  com.example.front_sample.activities.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.front_sample.activities.PaintActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.front_sample.activities.UDPActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.front_sample.activities.UDPActivity o-- com.example.front_sample.utils.udp.UDPHandler : udpHandler
  com.example.front_sample.activities.VideoActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.front_sample.activities.VideoActivity o-- com.example.front_sample.utils.udp.UDPHandler : udpHandler
  com.example.front_sample.utils.HttpHandler.HttpHandler -up-|> fi.iki.elonen.NanoHTTPD
  com.example.front_sample.utils.udp.UDPHandler o-- com.example.front_sample.utils.udp.UDPServerThread : udpServerThread
  com.example.front_sample.utils.udp.UDPServerThread o-- com.example.front_sample.utils.udp.UDPHandler : udpHandlerParent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
